feat: Establish initial project structure, add client/server placeholders, and configure CMake with FetchContent for Boost 1.83.0.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-build
+# Build artifacts
+build/
+cmake-build-*/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# CMake
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+install_manifest.txt
+
+# Compiled files
+*.o
+*.obj
+*.a
+*.lib
+*.so
+*.dylib
+*.dll
+*.exe
+
+# macOS
+.DS_Store
+
+# Windows
+Thumbs.db
