--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -42,10 +42,10 @@ story_location: docs/sprint-artifacts
 
 development_status:
   # Epic 1: Project Foundation & Build Infrastructure
-  epic-1: in-progress
+  epic-1: done
   1-1-cmake-project-structure-dependencies: done
   1-2-project-directory-structure: done
-  1-3-coding-standards-style-enforcement: in-progress  # Code review fixes applied, pending build verification
+  1-3-coding-standards-style-enforcement: done  # All review issues fixed, build verification complete
   epic-1-retrospective: optional
 
   # Epic 2: Core Protocol & Network Communication
